added messaging service

--- a/User-Service/src/main/resources/application.properties
+++ b/User-Service/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.jpa.defer-datasource-initialization=true
 #spring.datasource.username=admin
 #spring.datasource.password=admin
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/userdb
-spring.datasource.username=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5433/userdb
+spring.datasource.username=admin
 spring.datasource.password=a1
 spring.jpa.hibernate.ddl-auto=update
 
