--- a/Messeging-Service/src/main/resources/application.properties
+++ b/Messeging-Service/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 server.port=8082
 
 ## H2 Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5434/MessageDB
+spring.datasource.url=jdbc:postgresql://localhost:5435/messagedb
 spring.datasource.username=admin
-spring.datasource.password=admin
+spring.datasource.password=a1
 spring.jpa.hibernate.ddl-auto=update
 
 #Mongo Db configuration
