--- a/Friend-service/src/main/resources/application.properties
+++ b/Friend-service/src/main/resources/application.properties
@@ -15,11 +15,11 @@ spring.jpa.hibernate.ddl-auto=update
 
 
 spring.application.name=FRIEND-SERVICE
-
+server.port=0
 
 #eureka.instance.hostname=localhost
 #eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-#server.port=3030
+
 
 # Configuring Rate Limiter
 #resilience4j.circuitbreaker.instances.userServiceRateLimiter.limitForPeriod=10
