--- a/User-Service/src/main/resources/application.properties
+++ b/User-Service/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.application.name=USER-SERVICE
 
 #eureka.instance.hostname=localhost
 #eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-#server.port=3030
+server.port=0
 
 # Configuring Rate Limiter
 #resilience4j.circuitbreaker.instances.userServiceRateLimiter.limitForPeriod=10
