--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,8 @@
 		<module>Post-service</module>
         <module>Api-Gateway</module>
         <module>Messeging-Service</module>
+        <module>Eureka</module>
+        <module>Security-Service</module>
     </modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -26,10 +28,10 @@
 		<spring-cloud.version>2022.0.4</spring-cloud.version>
 	</properties>
 	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.boot</groupId>-->
+<!--			<artifactId>spring-boot-starter-data-jpa</artifactId>-->
+<!--		</dependency>-->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-stream</artifactId>
