added ability to upload imagees as posts

--- a/Image-Service/src/main/resources/application.properties
+++ b/Image-Service/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=IMAGE-SERVICE
 
 #DATABSE
-spring.datasource.url=jdbc:postgresql://localhost:5433/ImageDb
+spring.datasource.url=jdbc:postgresql://localhost:5436/imagedb
 spring.datasource.username=admin
-spring.datasource.password=admin
+spring.datasource.password=a1
 spring.jpa.hibernate.ddl-auto=update
 
 
