--- a/Api-Gateway/src/main/resources/application.properties
+++ b/Api-Gateway/src/main/resources/application.properties
@@ -12,3 +12,4 @@ logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-
 #spring.sleuth.sampler.probability=1.0
 #spring.zipkin.service.name=api-gateway
 
+logging.level.org.springframework.web= DEBUG
