--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,8 @@
         <module>Eureka</module>
         <module>Security-Service</module>
         <module>Image-Service</module>
-    </modules>
+		<module>Video-service</module>
+	</modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
