--- a/Post-service/src/main/resources/application.properties
+++ b/Post-service/src/main/resources/application.properties
@@ -13,6 +13,10 @@ spring.datasource.username=postgres
 spring.datasource.password=a1
 spring.jpa.hibernate.ddl-auto=update
 
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=1000MB
+spring.servlet.multipart.max-request-size=1000MB
+
 
 spring.application.name=POST-SERVICE
 
@@ -39,9 +43,3 @@ spring.application.name=POST-SERVICE
 #resilience4j.circuitbreaker.instances.userServiceCircuitBreaker.permittedNumberOfCallsInHalfOpenState=3
 #resilience4j.circuitbreaker.instances.userServiceCircuitBreaker.slidingWindowType=COUNT_BASED
 #resilience4j.circuitbreaker.instances.userServiceCircuitBreaker.automaticTransitionFromOpenToHalfOpenEnabled=true
-
-
-
-
-
-
