--- a/Post-service/src/main/resources/application.properties
+++ b/Post-service/src/main/resources/application.properties
@@ -43,3 +43,9 @@ spring.application.name=POST-SERVICE
 #resilience4j.circuitbreaker.instances.userServiceCircuitBreaker.permittedNumberOfCallsInHalfOpenState=3
 #resilience4j.circuitbreaker.instances.userServiceCircuitBreaker.slidingWindowType=COUNT_BASED
 #resilience4j.circuitbreaker.instances.userServiceCircuitBreaker.automaticTransitionFromOpenToHalfOpenEnabled=true
+
+#KAFKA
+spring.kafka.consumer.bootstrap-servers=localhost:9092
+spring.kafka.consumer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.consumer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.consumer.group-id=post-group
