--- a/Friend-service/src/main/resources/application.properties
+++ b/Friend-service/src/main/resources/application.properties
@@ -40,7 +40,11 @@ server.port=0
 #resilience4j.circuitbreaker.instances.userServiceCircuitBreaker.slidingWindowType=COUNT_BASED
 #resilience4j.circuitbreaker.instances.userServiceCircuitBreaker.automaticTransitionFromOpenToHalfOpenEnabled=true
 
-
+#KAFKA
+spring.kafka.consumer.bootstrap-servers=localhost:9092
+spring.kafka.consumer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.consumer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.consumer.group-id=post-group
 
 
 
