--- a/Image-Service/src/main/resources/application.properties
+++ b/Image-Service/src/main/resources/application.properties
@@ -32,7 +32,11 @@ resilience4j.circuitbreaker.instances.imageServiceCircuitBreaker.permittedNumber
 resilience4j.circuitbreaker.instances.imageServiceCircuitBreaker.slidingWindowType=COUNT_BASED
 resilience4j.circuitbreaker.instances.imageServiceCircuitBreaker.automaticTransitionFromOpenToHalfOpenEnabled=true
 
-
+#KAFKA
+spring.kafka.consumer.bootstrap-servers=localhost:9092
+spring.kafka.consumer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.consumer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.consumer.group-id=post-group
 
 
 
