--- a/Messeging-Service/src/main/resources/application.properties
+++ b/Messeging-Service/src/main/resources/application.properties
@@ -20,7 +20,11 @@ spring.jpa.hibernate.ddl-auto=update
 # Spring Application Name
 spring.application.name=MESSAGING
 
-
+#KAFKA
+spring.kafka.consumer.bootstrap-servers=localhost:9092
+spring.kafka.consumer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.consumer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.consumer.group-id=post-group
 
 #Zipkin
 management.tracing.sampling.probability=1.0
