--- a/User-Service/pom.xml
+++ b/User-Service/pom.xml
@@ -24,6 +24,10 @@
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.amqp</groupId>
