--- a/Video-service/pom.xml
+++ b/Video-service/pom.xml
@@ -67,6 +67,10 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-stream-rabbit</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
 
         <!--        <dependency>-->
         <!--            <groupId>io.micrometer</groupId>-->
