--- a/Video-service/src/main/resources/application.properties
+++ b/Video-service/src/main/resources/application.properties
@@ -9,6 +9,11 @@ spring.datasource.username=admin
 spring.datasource.password=a1
 spring.jpa.hibernate.ddl-auto=update
 
+#KAFKA
+spring.kafka.consumer.bootstrap-servers=localhost:9092
+spring.kafka.consumer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.consumer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.consumer.group-id=post-group
 
 #EUREKA
 
