--- a/Image-Service/src/main/resources/application.properties
+++ b/Image-Service/src/main/resources/application.properties
@@ -36,7 +36,7 @@ resilience4j.circuitbreaker.instances.imageServiceCircuitBreaker.automaticTransi
 spring.kafka.consumer.bootstrap-servers=localhost:9092
 spring.kafka.consumer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.consumer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
-spring.kafka.consumer.group-id=post-group
+spring.kafka.consumer.group-id=image-group
 
 
 
