--- a/Messeging-Service/src/main/resources/application.properties
+++ b/Messeging-Service/src/main/resources/application.properties
@@ -24,7 +24,7 @@ spring.application.name=MESSAGING
 spring.kafka.consumer.bootstrap-servers=localhost:9092
 spring.kafka.consumer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.consumer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
-spring.kafka.consumer.group-id=post-group
+spring.kafka.consumer.group-id=message-group
 
 #Zipkin
 management.tracing.sampling.probability=1.0
