--- a/Video-service/src/main/resources/application.properties
+++ b/Video-service/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.kafka.consumer.bootstrap-servers=localhost:9092
 spring.kafka.consumer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.consumer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
-spring.kafka.consumer.group-id=post-group
+spring.kafka.consumer.group-id=video-group
 
 #EUREKA
 
