--- a/Post-service-ReadModel-Projector/src/main/resources/application.properties
+++ b/Post-service-ReadModel-Projector/src/main/resources/application.properties
@@ -1,5 +1,25 @@
 #KAFKA
 spring.kafka.consumer.bootstrap-servers=localhost:9092
-spring.kafka.consumer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.consumer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
-spring.kafka.consumer.group-id=post-group
+spring.kafka.consumer.key-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.group-id=post-group-projector
+spring.kafka.consumer.properties.spring.json.trusted.packages=com.adamszablewski.*
+
+
+
+
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+
+#POSTGRESQL
+spring.datasource.url=jdbc:postgresql://localhost:5437/mydatabase
+spring.datasource.username=postgres
+spring.datasource.password=a1
+spring.jpa.hibernate.ddl-auto=update
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=1000MB
+spring.servlet.multipart.max-request-size=1000MB
+
+server.port=0
+spring.application.name=POST-SERVICE-PROJECTOR
