--- a/Notification-Service/pom.xml
+++ b/Notification-Service/pom.xml
@@ -20,8 +20,12 @@
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-            <version>3.1.0</version>
+            <artifactId>spring-boot-starter-webflux</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.twilio.sdk</groupId>
+            <artifactId>twilio</artifactId>
+            <version>9.2.5</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
