--- a/Security-Service/src/main/resources/application.properties
+++ b/Security-Service/src/main/resources/application.properties
@@ -1,5 +1,20 @@
 spring.application.name=SECURITY-SERVICE
 
+#H2
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+#KAFKA
+spring.kafka.consumer.bootstrap-servers=localhost:9092
+spring.kafka.consumer.key-deserializer=org.springframework.kafka.support.deserializer.JsonSerializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.deserializer.JsonSerializer
+spring.kafka.consumer.group-id=security-group
+
+
+spring.kafka.producer.key-deserializer=org.springframework.kafka.support.deserializer.JsonSerializer
+spring.kafka.producer.value-deserializer=org.springframework.kafka.support.deserializer.JsonSerializer
 
 
 #EUREKA
