--- a/Notification-Service/src/main/resources/application.properties
+++ b/Notification-Service/src/main/resources/application.properties
@@ -1,2 +1,14 @@
 twilio.account_sid=XXXX
 twilio.auth_token=XXXX
+
+
+#KAFKA
+spring.kafka.consumer.bootstrap-servers=localhost:9092
+spring.kafka.consumer.key-deserializer=org.springframework.kafka.support.deserializer.JsonSerializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.deserializer.JsonSerializer
+spring.kafka.consumer.group-id=post-group
+
+
+spring.kafka.producer.key-deserializer=org.springframework.kafka.support.deserializer.JsonSerializer
+spring.kafka.producer.value-deserializer=org.springframework.kafka.support.deserializer.JsonSerializer
+
