--- a/Post-service-Command/src/main/resources/application.properties
+++ b/Post-service-Command/src/main/resources/application.properties
@@ -46,11 +46,11 @@ server.port=0
 
 #KAFKA
 spring.kafka.consumer.bootstrap-servers=localhost:9092
-spring.kafka.consumer.key-deserializer=org.springframework.kafka.support.deserializer.JsonSerializer
-spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.deserializer.JsonSerializer
+spring.kafka.consumer.key-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
 spring.kafka.consumer.group-id=post-group
 
 
-spring.kafka.producer.key-deserializer=org.springframework.kafka.support.deserializer.JsonSerializer
-spring.kafka.producer.value-deserializer=org.springframework.kafka.support.deserializer.JsonSerializer
+spring.kafka.producer.key-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 
