--- a/Security-Service/src/main/resources/application.properties
+++ b/Security-Service/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.h2.console.path=/h2-console
 
 #KAFKA
 spring.kafka.consumer.bootstrap-servers=localhost:9092
-spring.kafka.consumer.key-deserializer=org.springframework.kafka.support.deserializer.JsonSerializer
-spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.deserializer.JsonSerializer
+spring.kafka.consumer.key-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
 spring.kafka.consumer.group-id=security-group
 
 
