added AWS s3 storage

--- a/Image-Service/src/main/resources/application.properties
+++ b/Image-Service/src/main/resources/application.properties
@@ -1,12 +1,14 @@
 spring.application.name=IMAGE-SERVICE
+#
+##DATABSE
+#spring.datasource.url=jdbc:postgresql://localhost:5436/imagedb
+#spring.datasource.username=admin
+#spring.datasource.password=a1
+#spring.jpa.hibernate.ddl-auto=update
 
-#DATABSE
-spring.datasource.url=jdbc:postgresql://localhost:5436/imagedb
-spring.datasource.username=admin
-spring.datasource.password=a1
-spring.jpa.hibernate.ddl-auto=update
-
-
+#AWS
+aws.region=eu-north-1
+aws.s3.buckets.customer=szablewskitestbucket
 #EUREKA
 
 eureka.instance.hostname=localhost
@@ -18,9 +20,9 @@ resilience4j.circuitbreaker.instances.imageServiceRateLimiter.limitForPeriod=10
 resilience4j.circuitbreaker.instances.imageServiceRateLimiter.limitRefreshPeriod=1s
 resilience4j.circuitbreaker.instances.imageServiceRateLimiter.limitType=FIXED
 
-#Zipkin
-management.tracing.sampling.probability=1.0
-logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}] #SB3
+##Zipkin
+#management.tracing.sampling.probability=1.0
+#logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}] #SB3
 
 # Configuring Circuit Breaker
 resilience4j.circuitbreaker.instances.imageServiceCircuitBreaker.event-consumer-buffer-size=10
