--- a/Friend-service/src/main/resources/application.properties
+++ b/Friend-service/src/main/resources/application.properties
@@ -1,12 +1,3 @@
-spring.jpa.defer-datasource-initialization=true
-#spring.h2.console.enabled=true
-#spring.datasource.url=jdbc:h2:mem:testdb
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=
-#spring.datasource.url=jdbc:postgresql://localhost:5432/userDB
-#spring.datasource.username=admin
-#spring.datasource.password=admin
 
 spring.datasource.url=jdbc:postgresql://localhost:5434/frienddb
 spring.datasource.username=admin
@@ -22,23 +13,19 @@ server.port=0
 
 
 # Configuring Rate Limiter
-#resilience4j.circuitbreaker.instances.userServiceRateLimiter.limitForPeriod=10
-#resilience4j.circuitbreaker.instances.userServiceRateLimiter.limitRefreshPeriod=1s
-#resilience4j.circuitbreaker.instances.userServiceRateLimiter.limitType=FIXED
-
-#Zipkin
-#management.tracing.sampling.probability=1.0
-#logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}] #SB3
+resilience4j.circuitbreaker.instances.userServiceRateLimiter.limitForPeriod=10
+resilience4j.circuitbreaker.instances.userServiceRateLimiter.limitRefreshPeriod=1s
+resilience4j.circuitbreaker.instances.userServiceRateLimiter.limitType=FIXED
 
 # Configuring Circuit Breaker
-#resilience4j.circuitbreaker.instances.userServiceCircuitBreaker.event-consumer-buffer-size=10
-#resilience4j.circuitbreaker.instances.userServiceCircuitBreaker.registerHealthIndicator=true
-#resilience4j.circuitbreaker.instances.userServiceCircuitBreaker.slidingWindowSize=5
-#resilience4j.circuitbreaker.instances.userServiceCircuitBreaker.failureRateThreshold=50
-#resilience4j.circuitbreaker.instances.userServiceCircuitBreaker.waitDurationInOpenState=5s
-#resilience4j.circuitbreaker.instances.userServiceCircuitBreaker.permittedNumberOfCallsInHalfOpenState=3
-#resilience4j.circuitbreaker.instances.userServiceCircuitBreaker.slidingWindowType=COUNT_BASED
-#resilience4j.circuitbreaker.instances.userServiceCircuitBreaker.automaticTransitionFromOpenToHalfOpenEnabled=true
+resilience4j.circuitbreaker.instances.userServiceCircuitBreaker.event-consumer-buffer-size=10
+resilience4j.circuitbreaker.instances.userServiceCircuitBreaker.registerHealthIndicator=true
+resilience4j.circuitbreaker.instances.userServiceCircuitBreaker.slidingWindowSize=5
+resilience4j.circuitbreaker.instances.userServiceCircuitBreaker.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.userServiceCircuitBreaker.waitDurationInOpenState=5s
+resilience4j.circuitbreaker.instances.userServiceCircuitBreaker.permittedNumberOfCallsInHalfOpenState=3
+resilience4j.circuitbreaker.instances.userServiceCircuitBreaker.slidingWindowType=COUNT_BASED
+resilience4j.circuitbreaker.instances.userServiceCircuitBreaker.automaticTransitionFromOpenToHalfOpenEnabled=true
 
 #KAFKA
 spring.kafka.consumer.bootstrap-servers=localhost:9092
