--- a/Image-Service/src/main/resources/application.properties
+++ b/Image-Service/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=IMAGE-SERVICE
 #
 ##DATABSE
-#spring.datasource.url=jdbc:postgresql://localhost:5436/imagedb
-#spring.datasource.username=admin
-#spring.datasource.password=a1
-#spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:postgresql://localhost:5436/imagedb
+spring.datasource.username=admin
+spring.datasource.password=a1
+spring.jpa.hibernate.ddl-auto=update
 
 #AWS
 aws.region=eu-north-1
