added s3 storage for video and CloudFront streaming

--- a/Video-service/src/main/resources/application.properties
+++ b/Video-service/src/main/resources/application.properties
@@ -3,11 +3,17 @@ spring.servlet.multipart.max-request-size=100MB
 
 spring.application.name=VIDEO-SERVICE
 
+#AWS
+aws.region=eu-north-1
+aws.s3.buckets.customer=adamszablewskitestvideo
+
 #DATABSE
 spring.datasource.url=jdbc:postgresql://localhost:5436/imagedb
 spring.datasource.username=admin
 spring.datasource.password=a1
 spring.jpa.hibernate.ddl-auto=update
+
+
 
 #KAFKA
 spring.kafka.consumer.bootstrap-servers=localhost:9092
@@ -42,7 +48,7 @@ resilience4j.circuitbreaker.instances.imageServiceCircuitBreaker.automaticTransi
 
 
 
-spring.cloud.stream.bindings.input.destination=your-input-queue
-spring.cloud.stream.bindings.output.destination=your-output-queue
-spring.rabbitmq.host=localhost
-spring.rabbitmq.port=5672
+#spring.cloud.stream.bindings.input.destination=your-input-queue
+#spring.cloud.stream.bindings.output.destination=your-output-queue
+#spring.rabbitmq.host=localhost
+#spring.rabbitmq.port=5672
